# neuraloperator

./: .gitignore  Adam.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  ahmed_test.py  constraints.txt  create_gif_from_pngs.py  debug_evaluation.py  debug_sample_contents.py  fieldwise_loss_example.py  fieldwise_loss_guide.py  final_fixed_loss.py  fixed_fieldwise_loss.py  fourier_1d.py  fourier_2d.py  fourier_2d_rnn.py  fourier_2d_time.py  fourier_3d.py  index.html  log.txt  lowrank_1d.py  lowrank_2d.py  lowrank_2d_rnn.py  lowrank_2d_time.py  lowrank_3d.py  make_field_animation.py  pyproject.toml  quick_debug_test.py  requirements.txt  requirements_dev.txt  run.sh  setup.py  setup_git.sh  test.ipynb  test_ahmed.py  test_argument_fix.py  test_eval_scenario.py  (+8 more)
.github/workflows/: build_and_push_doc_dev.yml  build_and_push_doc_stable.yml  build_doc.yml  build_doc_dev.yml  build_doc_stable.yml  deploy_pypi.yml  test.yml
FNO-torch.1.6/: fourier_1d.py  fourier_2d.py  fourier_2d_time.py  fourier_3d.py
ahmed_process/: process_info.py  process_mesh.py  pull_data.py
checkpoints/: model_metadata.pkl  model_state_dict.pt  optimizer.pt  scheduler.pt
config/: FNOGNOAhmed.yaml  FNOGNOAhmed_debug.yaml  FNOGNOAhmed_shear.yaml  FNOGNOAhmed_wloss.yaml  README.md  burgers_config.py  burgers_config.yaml  burgers_pino_config.py  burgers_pino_config.yaml  burgers_rno_config.py  car_cfd_config  car_cfd_config.yaml  cfd_config.yaml  convert.py  darcy_config.py  darcy_config.yaml  darcy_transformer_config.yaml  datasets.py  default_config.py  default_config.yaml  distributed.py  fnogno_carcfd_config.py  fnogno_carcfd_config.yaml  gino_carcfd_config.py  gino_carcfd_config.yaml  incremental.yaml  models.py  navier_stokes_config.py  navier_stokes_config.yaml  navier_stokes_temporal_config.yaml  opt.py  otno_carcfd_config.py  poisson_gino_config.py  poisson_gino_config.yaml  test_config.py  test_config.yaml  uqno_config.py  uqno_config.yaml  wandb.py
config/the_well/: active_matter_config.yaml  mhd64_config.yaml  mhd_64_config.py
data_generation/: ns_2d.py  random_fields.py
data_generation/burgers/: GRF1.m  burgers1.m  gen_burgers1.m
data_generation/darcy/: GRF.m  demo.m  solve_gwf.m
data_generation/navier_stokes/: ns_2d.py  random_fields.py
dataset_test/: ._darcy_test_16.pt  darcy_16.tgz  darcy_32.tgz
dev/: genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
dev/_modules/: index.html
dev/_sources/: index.rst.txt  install.rst.txt  sg_execution_times.rst.txt
dev/_static/: documentation_options.js  navbar_burger.js  tensorly_style.css
dev/modules/: api.html
doc/: requirements_doc.txt
docs/: genindex.html  search.html  searchindex.js
examples/: GALLERY_HEADER.rst  README.rst  UQNO_Darcy.py  burgers.yaml  checkpoint_FNO_darcy.py  darcy_data_processor.py  fourier_1d.ipynb  fourier_1d.yaml  plot_DISCO_convolutions.py  plot_FNO_darcy.py  plot_FNO_darcy_superres.py  plot_SFNO_swe.py  plot_UNO_darcy.py  plot_burgers.py  plot_count_flops.py  plot_darcy_flow.py  plot_darcy_flow_spectrum.py  plot_fourier_continuation.py  plot_incremental_FNO_darcy.py  plot_sample_callbacks.py  sample_callbacks.py  utils.py
neuralop/: __init__.py  conftest.py  dct.py  grf.py  mwt_utils.py  test.py  utils.py
scripts/: cpuoffload.md  darcy_single_node_ddp.sh  eval.py  fc_pino_1d_burgers.py  fetch_cfd_data.py  fourier_2d_tuned.py  fourier_on_images.py  login_wandb.py  ns_fourier_3d_rnn.py  ray_tune_sfno_swe.py  ray_tune_tfno_darcy.py  ray_tune_uno_darcy.py  run_test.py  spectral_study1d.py  spectral_study2d.py  spectral_study3d.py  spectrum_analysis.py  super_resolution.py  test_from_config.py  train_active_matter.py  train_burgers.py  train_burgers_pino.py  train_burgers_pino_without_trainer.py  train_burgers_rno.py  train_car_cfd.py  train_cfd.py  train_darcy.py  train_darcy_transformer.py  train_fnogno_carcfd.py  train_gino_carcfd.py  train_mhd64.py  train_navier_stokes.py  train_navier_stokes_incremental.py  train_ns_temporal.py  train_offload.py  train_otno_carcfd.py  train_poisson.py  train_transformer_darcy.py  train_turbulent_radiative_layer_2D.py  train_uqno_darcy.py
workflows/: build_doc.yml
(+779 files in other folders)
